[package]
name = "dapla_mobile"
version = "0.1.0"
authors = [
    "Alexander Mescheryakov <freecoder.xx@gmail.com>",
    "Noogen Team <info.noogen@gmail.com>",
]
edition = "2021"
license = "MIT"
repository = "https://github.com/noogen-projects/dapla-apk"
description = "The server of decentralized application platform"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
ndk-glue = "0.4"
log = "0.4"
flexi_logger = "0.20"
actix-web = "=4.0.0-beta.9"
dapla_server = { git = "https://github.com/noogen-projects/dapla" }

[package.metadata.android.sdk]
min_sdk_version = 16
target_sdk_version = 22
build_targets = ["aarch64-linux-android", "i686-linux-android"]

[[package.metadata.android.uses_permission]]
name = "android.permission.WRITE_EXTERNAL_STORAGE"

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"

[[package.metadata.android.uses_permission]]
name = "android.permission.CHANGE_NETWORK_STATE"

[[package.metadata.android.uses_permission]]
name = "android.permission.ACCESS_NETWORK_STATE"
